# masak2

./: .coveragerc  .dockerignore  .env.example  .gitignore  .npmrc  README.md  db.json  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack-stats.json  webpack.config.prod.ts  webpack.config.ts
.github/workflows/: backend.yml  frontend_test.yml  main.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  prod.Dockerfile  start.sh
masak2/: conftest.py
masak2/config/: api.py  settings.py  urls.py  wsgi.py
masak2/config/settings/: base.py  prod.py
masak2/ingredients/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
masak2/ingredients/migrations/: 0001_initial.py  0002_ingredient_amount.py  0003_auto_20200703_1851.py  0004_make_amount_and_unit_not_required.py  0005_make_ingredient_name_and_unique.py  0006_change_ordering.py
masak2/ingredients/tests/: test_models.py  test_serializers.py
masak2/recipes/: admin.py  models.py  serializers.py  urls.py  views.py
masak2/recipes/migrations/: 0001_initial.py  0002_auto_20200714_1659.py  0002_make_unit_not_required.py  0003_add_note_field.py  0003_add_tags_to_recipe.py  0004_rename_tags.py  0005_recipe_created_at.py
masak2/recipes/templates/recipes/: index.html  recipes.html
masak2/recipes/tests/: test_models.py  test_serializers.py
masak2/steps/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
masak2/steps/migrations/: 0001_initial.py  0002_auto_20200704_1737.py
masak2/tags/: admin.py  models.py  serializers.py  tests.py  views.py
masak2/tags/migrations/: 0001_initial.py  0002_add_file_to_tag.py  0003_auto_20200814_0656.py
masak2/templates/: base.html  navbar.html
masak2/templates/recipes/: index.html
masak2/templates/registration/: login.html
masak2/users/: backends.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
masak2/users/migrations/: 0001_initial.py  0002_add_saved_recipes.py  0002_auto_20200822_1657.py  0003_add_made_model.py
masak2/users/tests/: test_forms.py  test_models.py  test_serializers.py  test_urls.py
masak2/utils/: storages.py
static/css/: buttons.css  detail.css  main.css  navbar.css  recipes.css  searchbar.css  tags.css
static/css/fonts/: ThirdDegree.eot
static/ts/src/: Index.tsx  axiosConfig.ts  globals.d.ts  index.ts  index.tsx  utils.test.ts  utils.ts
terraform/: db.tf  provider.tf  web.tf
(+46 files in other folders)
